# chado-yield-optimizer

./: .gitignore  Dockerfile  README.md  SUBMISSION.md  agent.json  agent_metadata.json  api_keys.json  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
configs/: quickstart_config.json
frontend/: index.html
scripts/: mint_olas_agent.py  register_agent.py
src/: api.py  auth.py  config.py  main.py  olas_compat.py  x402_payments.py
src/agents/: __init__.py  yield_optimizer.py
src/protocols/: a2a.py
src/registry/: erc8004.py
src/utils/: logging.py
src/wallet/: __init__.py  safe_manager.py  strategies.py
